kdeadmin (4:4.7.1-0r0) UNRELEASED; urgency=low

  [ Daniele E. Domenichelli ]
  * New upstream release.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Oct 2011 14:07:07 +0100

kdeadmin (4:4.6.5-2) unstable; urgency=low

  [ Modestas Vainius ]
  * Switch to dh_python2 and actually enable byte-compilation for
    system-config-printer-kde.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 20 Jul 2011 00:56:56 +0300

kdeadmin (4:4.6.5-1) unstable; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.5.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Jul 2011 21:53:53 +0300

kdeadmin (4:4.6.3-1) unstable; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.3.
  * Bump Standards-Version to 3.9.2; no changes needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 May 2011 02:41:29 +0300

kdeadmin (4:4.6.2-1) experimental; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump build dependency on kdelibs5-dev to 4:4.6.
  * Bump kde-sc-dev-latest build dependency to 4:4.6.2.
  * Update installed files.
  * Bump to Standards-Version 3.9.1:
    - kde-config-cron breaks kcron (<< 4:4.4) rather than conflicts.
  * Drop 03_system_config_printer_kde_issues.diff, no longer needed.
  * Refresh 01_system_config_printer_kde_cupsutils.diff.
  * Remove knetworkconf package.
  * Fix spelling error in ksystemlog description.
  * Add myself to Uploaders.

  [ Modestas Vainius ]
  * Drop 04_system_config_printer_kde_pyqt4.7_issues.diff patch, it was
    backported from upstream.
  * Adapt 05_system_config_printer_kde_scroll_printer_options.diff to upstream
    changes.
  * Strip sequence numbers from debian/patches/*.
  * Switch debian/rules engine to dhmk based qt-kde-team/2/*: