@@ -2,6 +2,7 @@ kdeadmin (4:4.7.1-0r0) UNRELEASED; urgency=low
 
   [ Daniele E. Domenichelli ]
   * New upstream release.
+  * Update patches/system_config_printer_kde_cupsutils.diff.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Oct 2011 14:07:07 +0100
 
